static/main.css
body {
    background-color: rgb(235, 235, 235);
}

.navbar_left li.nav-item {
    margin-left: 20px;
}

#navbar_bg {
    height: 65px;
    background-color:#243a51;
}

#banner_bg {
    height: 300px;
    background-color:#2b435e;
    box-shadow: 0px 0px 20px rgba(50, 50, 60, 1)
}

.navbar {
    height: 65px;
    max-width: 1366px;
    margin: auto;
}

.navbar a {
    font-weight: bold;
}

.login_button {
    border: none;
    color: white;
    background-color: transparent;
}

.login_button:hover {
    border: none;
    background-color: #007bff;
}


.dropdown-menu {
    background-color: #424c59;
}

.dropdown-menu a {
    color: white;
}

.dropdown-item:hover {
    color: white;
    background-color:#007bff;
}

.banner_container {
    padding-top: 15px;
    padding-bottom: 15px;
    height: 300px;
    max-width: 1600px;
    margin: auto;
}

.core_container {
    max-width: 1600px;
    margin: 20px auto 0 auto;
    box-shadow: 0px 15px 30px rgba(50, 50, 60, 0.75)
}

.banner_side {
    position: relative;
    height: 270px;
    background-color: lightgray;
}

#banner_center {
    position: relative;
    background-image: url(banner.png);
    background-size: 100%;
    background-repeat: no-repeat;
    background-position: center;
    height: 270px;
}

.banner_text{
    color: white;
    width: 100%;
    align-items: center;
    position: absolute;
    bottom: 0;
    left: 0;
    background: linear-gradient(to top, rgba(0,0,0,0.6) 50%, rgba(0,0,0,0));
    padding-left: 30px;
    padding-bottom: 15px;
}

.banner_text p {
    margin: 0;
}

.banner_text h2 {
    margin-top: 4%;
    margin-bottom: 0;
}

.reports_bg {
    background-image: url("BB.png");
    background-size: cover;
    background-repeat: no-repeat;
}

.client_bg {
    background-image: url("crawler.png");
    background-size: cover;
    background-repeat: no-repeat;
}

#news_feed {
    height: 500px;
    background: rgb(240, 240, 240);
    padding-left: 5%;
    padding-right: 5%;
}

.newsfeed_post {
    padding-top: 40px;
    padding-bottom: 40px;
    border-bottom: thin solid lightgray;
}

.post_date {
    margin-left: 5px;
    color: darkgray;
    font-size: 13px;
}

footer {
    padding: 20px 0px 20px 0px;
    margin-top: 20px;
    background-color: #243a51;
}

footer p {
    margin: 10px auto 0 auto;
    color: lightgray;
}

